--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,23 @@
     <string name="name_hint">Имя пользователя:</string>
     <string name="password_hint">Пароль:</string>
     <string name="sign_in_button">Войти</string>
+    <string name="greetings">Привет, %s! Что желаете?</string>
+    <string name="tea">Чай</string>
+    <string name="coffee">Кофе</string>
+    <string name="additives">Что добавить в ваш %s?</string>
+    <string name="sugar">Сахар</string>
+    <string name="milk">Молоко</string>
+    <string name="lemon">Лимон</string>
+    <string name="choose_drink_type">Выберите типа напитка</string>
+    <string name="make_order">Сделать заказ</string>
+    <array name="types_of_tea">
+        <item>Зелёный</item>
+        <item>Чёрный</item>
+    </array>
+
+    <array name="types_of_coffee">
+        <item>Американо</item>
+        <item>Раф</item>
+        <item>Латте</item>
+    </array>
 </resources>
